--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@ Thumbs.db
 build/
 dist/
 
-# Configuration overrides (but keep the default config.yaml)
-config.local.yaml
-config.*.yaml
-!config.yaml
+# Configuration overrides (but keep the default watcheth.yaml)
+watcheth.local.yaml
+watcheth.*.yaml
+!watcheth.yaml
