--- a/watcheth.yaml
+++ b/watcheth.yaml
@@ -1,13 +1,17 @@
 clients:
-  # Local nodes
+  # Local nodes with log paths
   # - name: "prysm"
   #   endpoint: "http://localhost:15100"
+  #   log_path: "/var/log/{name}/{name}.log"  # Will use /var/log/prysm/prysm.log
   # - name: "lighthouse"
   #   endpoint: "http://localhost:15200"
+  #   log_path: "/home/ethereum/logs/lighthouse.log"  # Absolute path
   # - name: "teku"
   #   endpoint: "http://localhost:15300"
+  #   # log_path not specified - will default to /var/log/teku/teku.log
   # - name: "nimbus"
   #   endpoint: "http://localhost:15400"
+  #   log_path: "/var/log/ethereum/{name}-beacon.log"  # Custom pattern
 
   # Public endpoints (for testing/development)
   - name: 'EthStaker'
