--- a/watcheth.yaml
+++ b/watcheth.yaml
@@ -1,26 +1,15 @@
 clients:
-  # Local nodes with log paths
-  # - name: "prysm"
-  #   endpoint: "http://localhost:15100"
-  #   log_path: "/var/log/{name}/{name}.log"  # Will use /var/log/prysm/prysm.log
-  # - name: "lighthouse"
-  #   endpoint: "http://localhost:15200"
-  #   log_path: "/home/ethereum/logs/lighthouse.log"  # Absolute path
-  # - name: "teku"
-  #   endpoint: "http://localhost:15300"
-  #   # log_path not specified - will default to /var/log/teku/teku.log
-  # - name: "nimbus"
-  #   endpoint: "http://localhost:15400"
-  #   log_path: "/var/log/ethereum/{name}-beacon.log"  # Custom pattern
-
-  # Public endpoints (for testing/development)
-  - name: 'EthStaker'
+  - name: 'ethstaker'
+    type: 'consensus'
     endpoint: 'https://beaconstate.ethstaker.cc'
-  - name: 'Attestant'
+  - name: 'attestant'
+    type: 'consensus'
     endpoint: 'https://mainnet-checkpoint-sync.attestant.io'
-  - name: 'ChainSafe'
+  - name: 'chainsafe'
+    type: 'consensus'
     endpoint: 'https://beaconstate-mainnet.chainsafe.io'
-  - name: 'Sigma Prime'
+  - name: 'sigmaprime'
+    type: 'consensus'
     endpoint: 'https://mainnet.checkpoint.sigp.io'
 
 refresh_interval: 2s
