fix: add write permissions to release workflow
- Add 'contents: write' permission to allow creating releases
- Fixes Error 403: Resource not accessible by integration

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,9 @@ on:
       - 'v*'
       - 't*'
 
+permissions:
+  contents: write
+
 jobs:
   # Set variables that will be available to all builds.
   env_vars:
